# usb_to_zx_spectrum

./: README.md
code v1.0/: CMakeLists.txt  init.h  scancode_zx.c  scancode_zx.h  usb_to_zx_key.c  ws2812.h  ws2812.pio.h
code v1.1/: CMakeLists.txt  init.h  logger.h  scancode_zx.c  tusb_config.h  usb_to_zx_key.c
uf2/: usb_to_zx_key_BLACK.uf2  usb_to_zx_key_ZERO.uf2
